# wgse_kernel

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.local.yml  ci.wasm.yml  ci_local.yml  ci_wasm.yml
src/: errors.rs  lib.rs  types.rs
src/utils/derive_deref/: Cargo.toml
src/utils/derive_deref/src/: deref.rs  lib.rs
src/utils/meta_collect/: Cargo.toml
src/utils/meta_collect/src/: collect.rs  lib.rs
src/utils/meta_gen/: Cargo.toml
src/utils/meta_gen/src/: generate.rs  lib.rs
tools/ci/: Cargo.toml
tools/ci/src/: main.rs
