[package]
name = "wgse_kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["AWP_MCN_COFT <awpmcncoft-wgse@msneko.icu>"]
license = "MIT OR Apache-2.0"
readme = true
publish = false

[lib]
name = "wgse_kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.75"
binrw = "0.13.0"
function_name = "0.3.0"
leb128 = "0.2.5"
