[package]
name = "wgse_kernel"
version = "0.1.3"
edition = "2021"
build = "build.rs"
authors = ["AWP_MCN_COFT <awpmcncoft-wgse@msneko.icu>"]
license = "MIT OR Apache-2.0"
readme = true
publish = false

[workspace]
members = ["tools/ci"]

[lib]
name = "wgse_kernel"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.75"
binrw = "0.13.0"
enum_dispatch = "0.3.12"
leb128 = "0.2.5"
thiserror = "1.0.50"
wgse_utils = { git = "https://github.com/AwpMsnSoft/wgse_utils" }
