[package]
name = "derive_deref"
version = "1.0.0"
edition = "2021"
authors = ["AWP_MCN_COFT <awpmcncoft-wgse@msneko.icu>"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
proc-macro2 = "^1.0"                            # enum_dispatch locked proc-macro2
quote = "^1.0"                                  # enum_dispatch locked quote
syn = { version = "^2.0", features = ["full"] } # enum_dispatch locked syn
