[package]
name = "meta_collect"
version = "1.0.0"
edition = "2021"
authors = ["AWP_MCN_COFT <awpmcncoft-wgse@msneko.icu>"]

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
convert_case = "0.6.0"
if_chain = "1.0.2"
proc-macro2 = "1.0.69"
quote = "1.0.33"
serde_json = "1.0.107"
syn = { version = "2.0.38", features = ["full", "parsing", "extra-traits"] }
